tests/snapshots/r#mod__four_tasks_two_groups_graph@status_code.snap
---
source: tests/mod.rs
description: Should exit sucessfully after deterministically printing a graphviz dot representation of the engage file.
---
Some(
    0,
)
