tests/snapshots/r#mod__four_tasks_two_groups_graph_with_deps@status_code.snap
---
source: tests/mod.rs
description: Should exit successfully after deterministically printing a graphviz dot representation of the engage file.
---
Some(
    0,
)
