tests/snapshots/r#mod__four_tasks_two_groups_graph_with_deps@stderr.snap
---
source: tests/mod.rs
description: should exit successfully after deterministically printing a graphviz dot representation of the engage file
---

