tests/snapshots/r#mod__four_tasks_two_groups_group_subgraph_with_deps@stderr.snap
---
source: tests/mod.rs
description: should exit successfully after deterministically printing a graphviz dot representation of the requested subgraph of the engage file
---

