tests/snapshots/r#mod__four_tasks_two_groups_group_subgraph_with_deps@stdout.snap
---
source: tests/mod.rs
description: should exit successfully after deterministically printing a graphviz dot representation of the requested subgraph of the engage file
---
digraph {
    0 [ label = "group start: group b" ]
    1 [ label = "group end: group b" ]
    2 [ label = "task: task a" ]
    3 [ label = "task: task b" ]
    4 [ label = "group start: group a" ]
    5 [ label = "group end: group a" ]
    6 [ label = "task: task a" ]
    7 [ label = "task: task b" ]
    0 -> 2 [ label = "1" ]
    3 -> 1 [ label = "1" ]
    2 -> 3 [ label = "1" ]
    4 -> 6 [ label = "1" ]
    7 -> 5 [ label = "1" ]
    6 -> 7 [ label = "1" ]
    5 -> 0 [ label = "1" ]
}

