tests/snapshots/r#mod__four_tasks_two_groups_list@status_code.snap
---
source: tests/mod.rs
description: Should exit successfully after deterministically printing a textual representation of the engage file.
---
Some(
    0,
)
