tests/snapshots/r#mod__four_tasks_two_groups_list@stderr.snap
---
source: tests/mod.rs
description: should exit successfully after deterministically printing a textual representation of the engage file
---

