tests/snapshots/r#mod__four_tasks_two_groups_list@stdout.snap
---
source: tests/mod.rs
description: should exit successfully after deterministically printing a textual representation of the engage file
---
group a:
    task a
    task b

group b:
    task a
    task b

